--- a/5/index.html
+++ b/5/index.html
@@ -13,7 +13,7 @@
     <div class="container">
       <div class="header_main-menu">
         <div class="logo">
-          <a href="#"><img src="/img/logo.svg" alt="logo"></a>
+          <a href="#"><img src="img/logo.svg" alt="logo"></a>
         </div>
         <div class="menu_main">
           <ul class="menu_main__list-link">
@@ -26,7 +26,7 @@
         </div>
         <div class="cart">
           <a href="#">
-            <img src="/img/cart.svg">
+            <img src="img/cart.svg">
             <span class="cart_text">cart</span>
             <span class="cart_counters">0</span>
           </a>
@@ -52,7 +52,7 @@
         </div>
         <div class="search">
           <a href="#">
-            <img src="/img/search.svg" alt="">
+            <img src="img/search.svg" alt="">
             <span>I’m looking for ...</span>
           </a>
         </div>
