--- a/6_grid/index.html
+++ b/6_grid/index.html
@@ -9,8 +9,8 @@
   <title>Bootstrap 101 Template</title>
   <link href="https://fonts.googleapis.com/css2?family=Arvo&family=Noto+Sans&display=swap" rel="stylesheet">
   <!-- Bootstrap -->
-  <link rel="stylesheet" href="/css/bootstrap.min.css">
-  <link rel="stylesheet" href="/css/style.css">
+  <link rel="stylesheet" href="css/bootstrap.min.css">
+  <link rel="stylesheet" href="css/style.css">
 
 
     
@@ -23,28 +23,28 @@
    <div class="row why-list">
      <div class="col-md-3">
        <div class="why-list__img">
-         <img src="/img/money-work.png" alt="Позвольте вашим деньгам работать" class="img-fluid ">
+         <img src="img/money-work.png" alt="Позвольте вашим деньгам работать" class="img-fluid ">
        </div>
        <p class="why-list__title">Позвольте вашим<br>деньгам работать</p>
        <p>Проценты по договорам займа выше банковских</p>
      </div>
      <div class="col-md-3">
       <div class="why-list__img">
-         <img src="/img/work-with-me.png" alt="Зарабатывайте вместе с нами"  class="img-fluid">
+         <img src="img/work-with-me.png" alt="Зарабатывайте вместе с нами"  class="img-fluid">
       </div>     
        <p class="why-list__title">Зарабатывайте<br>вместе с нами</p>
        <p>Мы вкладываем собственные средства</p>
      </div>
      <div class="col-md-3">
       <div class="why-list__img">
-        <img src="/img/reliability.png" alt="Абсолютная надежность" class="img-fluid">
+        <img src="img/reliability.png" alt="Абсолютная надежность" class="img-fluid">
       </div>
        <p class="why-list__title">Абсолютная<br>надежность</p>
        <p>Все договоры займа обеспечены залогом</p>
      </div>
      <div class="col-md-3">
        <div class="why-list__img">
-         <img src="/img/no-risks.png" alt="Никаких рисков" class="img-fluid">
+         <img src="img/no-risks.png" alt="Никаких рисков" class="img-fluid">
        </div>
        <p class="why-list__title">Никаких<br>рисков</p>
        <p>Наша профессиональная<br>деятельность застрахована</p>
