--- a/6_grid/index.html
+++ b/6_grid/index.html
@@ -23,28 +23,28 @@
    <div class="row why-list">
      <div class="col-md-3 col-sm-6 col-sx-12 why-list__item">
        <div class="why-list__img">
-         <img src="/img/money-work.png" alt="Позвольте вашим деньгам работать" class="img-fluid ">
+         <img src="img/money-work.png" alt="Позвольте вашим деньгам работать" class="img-fluid ">
        </div>
        <p class="why-list__title">Позвольте вашим<br>деньгам работать</p>
        <p>Проценты по договорам займа выше банковских</p>
      </div>
      <div class="col-md-3 col-sm-6 col-sx-12 why-list__item">
       <div class="why-list__img">
-         <img src="/img/work-with-me.png" alt="Зарабатывайте вместе с нами"  class="img-fluid">
+         <img src="img/work-with-me.png" alt="Зарабатывайте вместе с нами"  class="img-fluid">
       </div>     
        <p class="why-list__title">Зарабатывайте<br>вместе с нами</p>
        <p>Мы вкладываем собственные средства</p>
      </div>
      <div class="col-md-3 col-sm-6 col-sx-12 why-list__item">
       <div class="why-list__img">
-        <img src="/img/reliability.png" alt="Абсолютная надежность" class="img-fluid">
+        <img src="img/reliability.png" alt="Абсолютная надежность" class="img-fluid">
       </div>
        <p class="why-list__title">Абсолютная<br>надежность</p>
        <p>Все договоры займа обеспечены залогом</p>
      </div>
      <div class="col-md-3 col-sm-6 col-sx-12 why-list__item">
        <div class="why-list__img">
-         <img src="/img/no-risks.png" alt="Никаких рисков" class="img-fluid">
+         <img src="img/no-risks.png" alt="Никаких рисков" class="img-fluid">
        </div>
        <p class="why-list__title">Никаких<br>рисков</p>
        <p>Наша профессиональная<br>деятельность застрахована</p>
