--- a/18_form/18.html
+++ b/18_form/18.html
@@ -13,7 +13,7 @@
   <div class="container">
     <div class="container-mail">
         <div class="block-img">
-        <img src="/img/mail.png" alt="email" class="img-reponsive">
+        <img src="img/mail.png" alt="email" class="img-reponsive">
       </div>
       <div class="block-form">
         <form action="thanks.html" id="form-save">
