--- a/19_modal-window/DZ/index.html
+++ b/19_modal-window/DZ/index.html
@@ -12,7 +12,7 @@
    
   <div class="forma">
     <a href="#modal-1" class="modal-link">Авторизуйся</a> 
-    <a href="#modal-2" class="modal-link-img"><img src="/img/quest.png" alt="Вопрос" class="modal-img"></a>
+    <a href="#modal-2" class="modal-link-img"><img src="img/quest.png" alt="Вопрос" class="modal-img"></a>
   </div>
   
   
